<?xml version="1.0"?>
<package>
  <name>ros_ml_controller</name>
  <version>0.0.1</version>
  <description>"Node for ML policy inference.</description>

  <maintainer email="rohan565singh@gmail.com">Rohan P. Singh</maintainer>
  <license>BSD</license>

  <buildtool_depend version_gte="0.5.68">catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

  <test_depend>roscpp_tutorials</test_depend>
</package>
